para que revise maxi

--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -3,7 +3,12 @@
 <%- include('partials/head') %> 
 <body>
    <%- include('partials/header') %>  
-   
+   <div>
+       <h1></h1>
+       <section>
+           
+       </section>
+   </div>
 </body>
 <footer>
     <%- include('partials/footer') %> 
