--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-<%- include('partials/head') %> 
-<body>
-   <%- include('partials/header') %>  
-   <div>
-       <h1></h1>
-       <section>
-           
-       </section>
-   </div>
-</body>
-<footer>
-    <%- include('partials/footer') %> 
-</footer>
+<%- include('partials/head') %>
+
+	<body>
+		<%- include('partials/header') %>
+			<div class="container">
+				<h1></h1>
+				
+			</div>
+			<%- include('partials/footer') %>
+	</body>
+
 </html>
