--- a/Site/views/shipping.ejs
+++ b/Site/views/shipping.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
     <title>Recibir</title>
 </head>
 <body class="recibir">
@@ -22,8 +22,8 @@
             </nav>
 
             <div class="btn-group">
-                <a href="./recibir.html" class="btn btn-primary active" aria-current="page">Recibir</a>
-                <a href="./retirar.html" class="btn btn-primary">Retirar</a>
+                <a href="./shipping.ejs" class="btn btn-primary active" aria-current="page">Recibir</a>
+                <a href="./remove.ejs" class="btn btn-primary">Retirar</a>
               </div>
 
             <div class="toggle-nav">
