--- a/Site/views/shipping.ejs
+++ b/Site/views/shipping.ejs
@@ -22,8 +22,8 @@
             </nav>
 
             <div class="btn-group">
-                <a href="./shipping.ejs" class="btn btn-primary active" aria-current="page">Recibir</a>
-                <a href="./remove.ejs" class="btn btn-primary">Retirar</a>
+                <a href="shipping.ejs" class="btn btn-primary active" aria-current="page">Recibir</a>
+                <a href="remove.ejs" class="btn btn-primary">Retirar</a>
               </div>
 
             <div class="toggle-nav">
