--- a/Site/views/partials/footer.ejs
+++ b/Site/views/partials/footer.ejs
@@ -1,3 +1,28 @@
-<footer>
-    
-</footer>
+<footer class="container-fluid">
+    <div class="footer">
+      <div class="row footer-width">
+
+        <article class="col-12 col-lg-4">
+          <i class="fas fa-credit-card "></i>
+          <h4>Pagá con tarjeta o en efectivo</h4>
+          <p>Contamos con amplias opciones de pago para tu comodidad</p>
+        </article>
+
+        <article class="col-12 col-lg-4">
+          <i class="fas fa-gift "></i>
+          <h4>Envío gratis desde $ 4.999</h4>
+          <p>Para tu comodidad si superas el monto de 4.999 nosotros invitamos el envio.</p>
+        </article>
+
+        <article class="col-12 col-lg-4">
+            <i class="fas fa-smile"></i>
+          <h4>Seguridad, de principio a fin</h4>
+          <p>Clientes satisfechos desde 1990.</p>
+        </article>
+
+        <div class="col-12">
+          <p class="copyright">Copyright © 1990-2021 TechnoHouse S.R.L.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
