--- a/Site/views/cart.ejs
+++ b/Site/views/cart.ejs
@@ -36,9 +36,9 @@
                                     <li><a href="">Componentes</a></li>
                                 </ul>
                                 <ul class="usuario navbar-nav ml-auto">
-                                    <li><a href="">Creá tu cuenta <i class="far fa-address-card "></i></a></li>
-                                    <li><a href="">Ingresá <i class="fas fa-sign-in-alt "></i></a></li>
-                                    <li><a href="">Guardados <i class="fas fa-shopping-basket "></i></a></li>
+                                    <li><a href="/register">Creá tu cuenta <i class="far fa-address-card "></i></a></li>
+                                    <li><a href="login">Ingresá <i class="fas fa-sign-in-alt "></i></a></li>
+                                    <li><a href="#">Guardados <i class="fas fa-shopping-basket "></i></a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -114,13 +114,13 @@
 
 
 
-    <div class="container botones">
+    <div class="container-botones">
         <div class="row col-12">
-            <div class="col-4">
-                <a href="index.html" class="btn btn-info btn-block">ENVIAR A GUARDADOS</a>
+            <div class="col-6">
+                <a href="/cart" class="btn btn-info btn-block">ENVIAR A GUARDADOS</a>
             </div>
-            <div class="col-4">
-                <button href="#" class="btn btn-success btn-block" id="procesar-compra">COMPRAR
+            <div class="col-6">
+                <button href="/payform" class="btn btn-success btn-block" id="procesar-compra">COMPRAR
                     AHORA</button>
             </div>
         </div>
@@ -138,10 +138,7 @@
 
     <section class="mas-productos">
         <h2>PENSADO PARA VOS</h2>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 18rem; align-items: center;">
                         <img src="https://ventaderepuestos.es/21325-thickbox_default/modulo-electronico-00646759.jpg"
                             class="card-img-top" alt="...">
                         <div class="card-body">
@@ -156,7 +153,7 @@
                             <h5 class="card-title">Led RGB 5mm</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Agregar y comprar ahora</a>
+                            <a href="/cart" class="btn btn-primary">Agregar y comprar ahora</a>
                         </div>
                         <img src="https://assets.liveracemedia.com/media/images/10621_Inline_Photo_0AteMLY.max-1000x1000.jpg"
                             class="card-img-top" alt="...">
@@ -164,25 +161,16 @@
                             <h5 class="card-title">Servo Hitec</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Agregar y comprar ahora</a>
+                            <a href="/cart" class="btn btn-primary">Agregar y comprar ahora</a>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Anterior</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Siguiente</span>
-                    </a>
-                </div>
     </section>
 
 
 
 
 
-
+    <%- include('partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
