--- a/Site/views/productAdd.ejs
+++ b/Site/views/productAdd.ejs
@@ -72,7 +72,7 @@
                     </div>   
                     </div>        
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-12" id="agregarFoto">
                             <button type="submit" class="agregarF"> AGREGAR FOTOS </button>
                                 </div>
                         </div>
@@ -132,12 +132,12 @@
                                         </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <input placeholder="Precio final $" type="text">
+                                    <input placeholder="Precio final $" type="text" id="precioFinal">
                                 </div>
                                 </div>
 
 
-                                <div class="row">
+                                <div class="row" id="botones">
                                     <div class="col-md-6">
                                         <div>
                                             <button type="submit" class="agregar"> AGREGAR </button>
