--- a/Site/views/cart.ejs
+++ b/Site/views/cart.ejs
@@ -15,52 +15,9 @@
 <body class="cart-body">
 
     <header class="cart-header">
-        <div class="container">
-            <div class="row col">
+        
+        <%- include('partials/header') %>
 
-                <nav class="navbar navbar-light ">
-                    <a class="navbar-brand" href="#">
-                        <img src="./images/Logo_.png " alt="logotipo">
-                    </a>
-                </nav> 
-                <nav class="navbar">
-                            <button class="navbar-toggler burger" type="button" data-toggle="collapse"
-                                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation"><i
-                                    class="fas fa-bars "></i></button>
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="menu navbar-nav mr-auto">
-                                    <li><a href="">Arduino</a></li>
-                                    <li><a href="">Modulos</a></li>
-                                    <li><a href="">Sensores</a></li>
-                                    <li><a href="">Componentes</a></li>
-                                </ul>
-                                <ul class="usuario navbar-nav ml-auto">
-                                    <li><a href="/register">Creá tu cuenta <i class="far fa-address-card "></i></a></li>
-                                    <li><a href="login">Ingresá <i class="fas fa-sign-in-alt "></i></a></li>
-                                    <li><a href="#">Guardados <i class="fas fa-shopping-basket "></i></a></li>
-                                </ul>
-                            </div>
-                        </nav>
-                <nav class="nav-search-input">
-                    <div class="container-fluid">
-                        <form class="d-flex">
-                            <input class="form-control" type="search" placeholder="Busca el producto que necesitas"
-                                aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Buscar</button>
-                        </form>
-                        <br>
-                       
-
-                    </div>
-            </div>
-
-            </nav>
-
-
-
-        </div>
-        </div>
     </header>
 
 
