--- a/Site/views/formularioPago.ejs
+++ b/Site/views/formularioPago.ejs
@@ -18,11 +18,11 @@
                 <div class="row">
                     <div class="col-md-3"></div>
                     <a href="#" class="logoA">
-                        <img class="logo" src="img/Logo_.png" alt="">
+                        <img class="logo" src="images/Logo_.png" alt="">
                       </a>
                 </div>
                     <div class="col-md-6">
-                        <form action="">
+                        <form action="" id="buscador">
                             <input type="text" placeholder="Buscar productos, marcas y más">
                             <button type="submit">
                               <i class="fas fa-search"></i>
