agrega cambios en los css

--- a/Site/views/partials/header.ejs
+++ b/Site/views/partials/header.ejs
@@ -20,7 +20,7 @@
             <div class="col-md-3">
                 <ul class="botones-nav">
                     <li><a class="btn btn-primary bot1 " href="/cart" role="button">Carrito <i class="fas fa-cart-plus "></i></a></li>
-                    <li><a class="btn btn-primary bot2"  href="/users/Iniciar" role="button">Iniciar Sesion <i class="far fa-address-card "></i></a></li>
+                    <li><a class="btn btn-primary bot2"  href="/users/Iniciar" role="button">Iniciar Sesión <i class="far fa-address-card "></i></a></li>
                     <li><a class="btn btn-primary bot3" href="#" role="button">Guardados <i class="far fa-heart "></i></a></li>
                   </ul>
                 </div>
