--- a/Site/public/stylesheets/style.css
+++ b/Site/public/stylesheets/style.css
@@ -1,7 +1,10 @@
 @import 'general.css';
 
 @import 'footer.css'; 
+ 
+@import 'header.css';
 
+@import 'formCarga.css';
 
 /* Carrito  header y footer montserrat  body*/
 
@@ -35,154 +38,6 @@ section.recibir iframe{
   height: 80%;
 }
 
-/* BODY */
-
-body.cart {
-  background-color: #DDDDDD;
-}
-
-.dispFl {
-  display: flex;
-  margin-top: 10px;
-}
-
-
-/*HEADER*/
-header .header-container {
-  max-width: 1140px;
-
-}
-
-.bg-light {
-  background-color: #30475e!important;
-  padding-bottom: 20px;
-
-}
-
-.logo {
-  vertical-align: middle;
-  width: 59%;
-  margin-top: 14px;
-}
-
-
-header .row {
-  background-color: #30475e; 
-  padding-bottom: 10px;
-}
-
-.form-control {
-  padding: 0.375rem 15.75rem;
-  padding: 0.375rem 15.75rem;
-  border-radius: 28px;
-  font-size: small;
-}
-
-header form {
-  background-color: #fff;
-  border: 1px solid var(--color-grisClaro);
-  border-radius: 5px;
-  padding: 5px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 70px;
-}
-header form input {
-  background-color: none;
-  border: none;
-  border-right: 2px solid #30475e;
-  padding: 0px 10px;
-  width: 50%;
-  flex-grow: 1;
-}
-header form button {
-  background: none;
-  border: none;
-  color: #30475e;
-  margin: 0 8px;
-}
-
-.botones-nav {
-  list-style: none;
-  margin-bottom: 2px;
-  margin-top: 10px;
-  margin-left: 84px;
-}
-
-.bot1 {
-  margin-bottom: 5px;
-  padding-right: 38px;
-}
-
-.bot2{
-  padding-right: 28px;
-}
-.bot3{
-  margin-top: 5px;
-}
-
-.btn-primary {
-  color: #000000;
-  background-color: #dddddd;
-  border-color: #000000;
-}
-
-.agregar {
-  margin: 0px auto;
-  padding: 10px 30px;
-  text-align: center;
-  border: none;
-  background-color: #f05454;
-  border-radius: 9px;
-  width: 70%;
-  color: white;
-}
-
-
-.cancelar {
-  margin: 0px auto;
-  padding: 10px 30px;
-  text-align: center;
-  border: none;
-  background-color: #f05454;
-  border-radius: 9px;
-  width: 70%;
-  color: white;
-}
-
-
-#category {
-    width: 100%;
-    background-color: #DDDDDD;
-}
-
-.agregarF {
-  margin: 0px auto;
-  padding: 12px 31px;
-  text-align: center;
-  border: none;
-  background-color: #f05454;
-  border-radius: 9px;
-  margin-top: 27px;
-  width: 62%;
-  color: white;
-}
-
-
-/* IMAGENES PEQUEÑAS */ 
-
-  .img2 {
-padding-left: 30px;
-}
-
-.img3 {
-  padding-left: 30px;
-}
-
-.img4 {
-  padding-left: 30px;
-}
 
 /*RESPONSIVE */
 
