--- a/Site/views/partials/header.ejs
+++ b/Site/views/partials/header.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-3" id="logoA">
             <a href="/">
-                <img class="logo" src="images/Logo_.png" alt="">
+                <img class="logo" src="/images/Logo_.png" alt="">
               </a>
                 </div>
         
@@ -20,7 +20,7 @@
             <div class="col-md-3">
                 <ul class="botones-nav">
                     <li><a class="btn btn-primary bot1 " href="/cart" role="button">Carrito <i class="fas fa-cart-plus "></i></a></li>
-                    <li><a class="btn btn-primary bot2"  href="/users/Iniciar" role="button">Iniciar Sesión <i class="far fa-address-card "></i></a></li>
+                    <li><a class="btn btn-primary bot2"  href="/users/Iniciar" role="button">Mi Perfil <i class="far fa-address-card "></i></a></li>
                     <li><a class="btn btn-primary bot3" href="#" role="button">Guardados <i class="far fa-heart "></i></a></li>
                   </ul>
                 </div>
