--- a/Site/views/productAdd.ejs
+++ b/Site/views/productAdd.ejs
@@ -1,45 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle de producto</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-     <link rel="stylesheet" href="stylesheets/productAdd.css">
-
-</head>
+<%- include('partials/head')
 
 <body>
-    <header>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-3" id="logoA">
-                    <a href="#">
-                        <img class="logo" src="images/Logo_.png" alt="">
-                      </a>
-                        </div>
-                
-                    <div class="col-md-6">
-                        <form action="" id="form">
-                            <input type="text" placeholder="Buscar productos, marcas y más">
-                            <button type="submit">
-                              <i class="fas fa-search"></i>
-                            </button>
-                          </form>
-                    </div>
-
-                    <div class="col-md-3">
-                        <ul class="botones-nav">
-                            <li><a class="btn btn-primary bot1 " href="#" role="button">Carrito <i class="fas fa-cart-plus "></i></a></li>
-                            <li><a class="btn btn-primary bot2"  href="#" role="button">Mi Perfil <i class="far fa-address-card "></i></a></li>
-                            <li><a class="btn btn-primary bot3" href="#" role="button">Guardados <i class="far fa-heart "></i></a></li>
-                          </ul>
-                        </div>
-                        </div>
-                    </div>
-                </header>
+    <%- include('partials/header')
 
         <section>
             <div class="container boxContainer">
@@ -48,7 +13,7 @@
                     <div class="row">
                     <div class="col-md-12">
                         <div class="img">
-                        <img src="images/2.png" alt="">
+                        <img src="/images/2.png" alt="">
                     </div>
                         </div>
                     </div>
@@ -56,18 +21,18 @@
                     <div class="row">
                     <div class="col-md-12 dispFl">
                     <div class="img1">
-                            <img src="images/1.png" alt="">
+                            <img src="/images/1.png" alt="">
                       </div>
                         
                         <div class="img2">
-                            <img src="images/1.png" alt="">
+                            <img src="/images/1.png" alt="">
                       </div>
                         
                         <div class="img3">
-                            <img src="images/1.png" alt="">
+                            <img src="/images/1.png" alt="">
                       </div>
                             <div class="img4">
-                            <img src="images/1.png" alt="">
+                            <img src="/images/1.png" alt="">
                       </div>
                     </div>   
                     </div>        
@@ -156,19 +121,11 @@
             </div>
         </section>
 
-
+        <%- include('partials/footer')
     
 
 
-    <!-- <footer>
-        <div>
-            Footer
-        </div>
-    </footer> -->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
