--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iniciar sesión</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/iniciar.css">
-    <link rel="stylesheet" href="/stylesheets/footer.css">
-    
-</head>
+<%- include('partials/head') %>
 
 <body>
   <header>
@@ -18,7 +9,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12"></div>
-                <a href="#" class="logoA">
+                <a href="/" class="logoA">
                     <img class="logo" src="/images/Logo_.png" alt="">
                 </a>
                 </div>
