--- a/Site/views/productAdd.ejs
+++ b/Site/views/productAdd.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('partials/head')
+<%- include('partials/head') %>
 
 <body>
-    <%- include('partials/header')
+    <%- include('partials/header') %>
 
         <section>
             <div class="container boxContainer">
@@ -121,10 +121,7 @@
             </div>
         </section>
 
-        <%- include('partials/footer')
-    
-
-
+        <%- include('partials/footer') %>
   
 </body>
 
