--- a/Site/public/stylesheets/iniciar.css
+++ b/Site/public/stylesheets/iniciar.css
@@ -78,7 +78,7 @@ header form {
 
   /*FORMULARIO DE REGISTRO*/
 
-  .container{
+  .inicia{
     width: 100%;
     height: 100vh;
     padding: 10px;
