--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -18,7 +18,7 @@
 </header>
 
     <section>
-        <div class="container">
+        <div class="container inicia">
           <div class="row">
             <div class="col-md-12">
               <div class="login-container">
