--- a/Site/public/stylesheets/iniciar.css
+++ b/Site/public/stylesheets/iniciar.css
@@ -5,35 +5,15 @@ body{
 
 /*HEADER*/
 
-header .header-container {
-    max-width: 1140px;
-
-}
-
-.bg-light {
+.header-inicia nav {
     background-color: #30475e!important;
     padding-bottom: 20px;
 
 }
 
-.logo {
-    vertical-align: middle;
-    width: 65%;
-    margin-top: 14px;
-    margin-bottom: -19px;
-}
+.header-inicia img {
+  width: 200px;
 
-.logoA {
-    text-align: end;
-    padding-left: 441px;
-    padding-top: 0px;
-
-}
-
-
-header .row {
-    background-color: #30475e; 
-    padding-bottom: 10px;
 }
 
 .form-control {
@@ -43,54 +23,21 @@ header .row {
     font-size: small;
 }
 
-header form {
-    background-color: #fff;
-    border: 1px solid var(--color-grisClaro);
-    border-radius: 5px;
-    padding: 5px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 70px;
-  }
-  header form input {
-    background-color: none;
-    border: none;
-    border-right: 2px solid #30475e;
-    padding: 0px 10px;
-    width: 50%;
-    flex-grow: 1;
-  }
-  header form button {
-    background: none;
-    border: none;
-    color: #30475e;
-    margin: 0 8px;
-  }
-
-  .botones-nav {
-    list-style: none;
-    margin-bottom: 2px;
-    margin-top: 10px;
-    margin-left: 84px;
-  }
-
 
   /*FORMULARIO DE REGISTRO*/
 
   .inicia{
     width: 100%;
-    height: 100vh;
     padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
    
   .login-container{
+    flex-direction: column;
     display: flex;
-    width: 650px;
-    height: auto;
     background: #fff;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .2);
   }
@@ -212,22 +159,20 @@ header form {
 }
 
 
+ /*RESPONSIVE*/
 
-     /*RESPONSIVE*/
+ @media(min-width:768px) {
 
-  @media only screen and (max-width: 540px){
-    .login-container{
-      display: block;
-    }
-   
-    .register, .login{
-      flex: none;
-    }
-   
-    .register::after{
-      top: unset;
-      bottom: -25px;
-      left: 50%;
-      transform: translateX(-50%) rotate(90deg);
-    }
+  .login-container{
+  
+    flex-direction: row;
+    margin: 30px 0;
   }
+ }
+
+ @media (min-width:1024px){
+  .login-container{
+  
+   width:640px;
+  }
+ }
