--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -4,16 +4,14 @@
 <%- include('partials/head') %>
 
 <body>
-  <header>
+  <header class="header-inicia">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12"></div>
-                <a href="/" class="logoA">
+                <div class="col-12 text-center">
+                  <a href="/">
                     <img class="logo" src="/images/Logo_.png" alt="">
                 </a>
                 </div>
-         </div>
+                
      </nav>
 </header>
 
@@ -40,7 +38,7 @@
                     <button class="fb"><i class="fab fa-facebook-f"></i> Acceder con Facebook</button>
                     <button class="tw"><i class="fab fa-twitter"></i> Acceder con Twitter</button>
                     <button class="correo"><i class="fab fa-google-plus-g"></i> Acceder con Correo</button>
-                  </div>
+                  </div> 
                 </div>
               </div>
             </div>
