--- a/Site/views/partials/footer.ejs
+++ b/Site/views/partials/footer.ejs
@@ -1,28 +1,57 @@
-<footer class="container-fluid">
-    <div class="footer">
-      <div class="row footer-width">
-
-        <article class="col-12 col-lg-4">
-          <i class="fas fa-credit-card "></i>
-          <h4>Pagá con tarjeta o en efectivo</h4>
-          <p>Contamos con amplias opciones de pago para tu comodidad</p>
-        </article>
-
-        <article class="col-12 col-lg-4">
-          <i class="fas fa-gift "></i>
-          <h4>Envío gratis desde $ 4.999</h4>
-          <p>Para tu comodidad si superas el monto de 4.999 nosotros invitamos el envio.</p>
-        </article>
-
-        <article class="col-12 col-lg-4">
-            <i class="fas fa-smile"></i>
-          <h4>Seguridad, de principio a fin</h4>
-          <p>Clientes satisfechos desde 1990.</p>
-        </article>
-
-        <div class="col-12">
-          <p class="copyright">Copyright © 1990-2021 TechnoHouse S.R.L.</p>
+<footer id="footer1" class="footer">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="about">	
+                          <h2>Nøsotros</h2>
+            <p> Somos una empresa con más de 21 años de trayectoria, llevando novedades tecnølógicas a todos los hogares del país. <strong>Contamos con un equipo de trabajo profesional </strong> que hace posible el desarrollo continuo y sostenido de la empresa, guiado por los valores fundante: satisfacción al cliente, compromiso, cordialidad, mejora continua y eficacia.</p>
+            <p>Cøpyright © 2021. TechnoHouse® es una marca registrada. </p>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 col-12">
+          <div class="lists">
+            <h2 class="produ">Productos</h2>
+            <ul class="list">
+              <li><a href="./"><i class="fa fa-angle-right"></i>Arduinø</a></li>
+              <li><a href="#"><i class="fa fa-angle-right"></i>Modulos</a></li>
+              <li><a href="#"><i class="fa fa-angle-right"></i>Sensores</a></li>
+              <li><a href="#"><i class="fa fa-angle-right"></i>Accesorios</a></li>
+              <li><a href="#"><i class="fa fa-angle-right"></i>Servos</a></li>
+              <li><a href="#"><i class="fa fa-angle-right"></i>Led</a></li>
+             <li><a href="#"><i class="fa fa-angle-right"></i>Motores</a></li>
+              <li><a href="#"><i class="fa fa-angle-right"></i>Componentes</a></li>
+            </ul>
+          </div>
+        </div>
+        
+        <div class="col-lg-3 col-md-6 col-12">
+          <div class="contact">
+            <h2 class="cont">Contáctanos</h2>
+            <ul class="list">
+              <li><i class="fa fa-home"></i>Buenos Aires, Argentina.</li>
+              <li><i class="fa fa-phone"></i>4064 36 78</li>
+              <li><i class="fa fa-envelope"></i><a href="#">info@technohouse.com</a></li>
+              <li><i class="fa fa-envelope"></i><a href="#">soporte@technohouse.com</a></li>
+            </ul>
+          </div>
+        </div>
+        
+        <div class="col-lg-3 col-md-6 col-12">
+          <div class="about">
+            <h2>Síguenøs en nuestras Redes</h2>
+            <div>
+              <ul class="social">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a></li>									
+              </ul>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
+  </div>
   </footer>
