--- a/Site/views/formularioPago.ejs
+++ b/Site/views/formularioPago.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/formularioPago.css">
+    <link rel="stylesheet" href="stylesheets/footer.css">
     
 </head>
 
@@ -17,7 +18,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-3"></div>
-                    <a href="#" class="logoA">
+                    <a href="/" class="logoA">
                         <img class="logo" src="images/Logo_.png" alt="">
                       </a>
                 </div>
@@ -125,18 +126,7 @@
         </div>
     </sectio>
     
-
-
-      
-
-    
-
-
-    <!-- <footer>
-        <div>
-            Footer
-        </div>
-    </footer> -->
+    <%- include('partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
