--- a/Site/views/partials/footer.ejs
+++ b/Site/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer id="footer1" class="footer">
+<footer class="footer">
   <div class="footer-top">
     <div class="container">
       <div class="row">
@@ -49,8 +49,9 @@
               </ul>
             </div>
           </div>
-          
+         
         </div>
+
       </div>
     </div>
   </div>
