se agrega carrusel/imagenes

--- a/Site/public/stylesheets/formularioPago.css
+++ b/Site/public/stylesheets/formularioPago.css
@@ -94,6 +94,7 @@ header form {
     text-align: center;
     margin-top: 35px;
     margin-bottom: 20px;
+    color: #222831;
 }
 
 .col-md-12 box1 {
