--- a/Site/public/stylesheets/home.css
+++ b/Site/public/stylesheets/home.css
@@ -10,3 +10,22 @@
     width: 90%;
     margin: 0 auto;
 }
+
+.mb-5 {
+    padding: 0px;
+}
+
+h5 {
+    display: inline-block;
+    padding: 10px;
+    background: #30475e;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: white;
+  }
+  
+  .p {
+    text-align: center;
+    padding-top: 40px;
+    font-size: 13px;
+  }
