--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -4,22 +4,57 @@
 
 	<body>
 		<%- include('partials/header') %>
+	
+	
+			<!-- COMIENZO DE CARROUSEL-->
 
-			<div class="container-fluid mb-5">
-				<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="/images/carru1.jpg" class="d-block w-100" alt="...">
-						</div>
-						<div class="carousel-item">
-							<img src="..." class="d-block w-100" alt="...">
-						</div>
-						<div class="carousel-item">
-							<img src="..." class="d-block w-100" alt="...">
-						</div>
+
+			<script>
+				$('.carousel').carousel({
+ 					 interval: 5000,
+  				pause: "false"
+						});
+			</script>
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+				  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				</ol>
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner">
+				  <div class="carousel-item active">
+					<img class="d-block w-100" src="images/carru3.jpg" data-color="lightblue" alt="First Image">
+					<div class="carousel-caption d-md-block">
+						<a class="boton" href="#" target="_blank"><h5>VER PRODUCTO</h5></a>
 					</div>
+				  </div>
+				  <div class="carousel-item">
+					<img class="d-block w-100" src="images/carru2.jpg" data-color="firebrick" alt="Second Image">
+					<div class="carousel-caption d-md-block">
+						<a class="boton" href="#" target="_blank"><h5>VER PRODUCTO</h5></a>
+						
+					</div>
+				  </div>
+				  <div class="carousel-item">
+					<img class="d-block w-100" src="images/carru3.jpg" data-color="violet" alt="Third Image">
+					<div class="carousel-caption d-md-block">
+						<a class="boton" href="#" target="_blank"><h5>VER PRODUCTO</h5></a>
+					</div>
+				  </div>
 				</div>
-			</div>
+				<!-- Controls -->
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+					</a>
+					  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+					</a>
+					</div>
+		
 
 			<!-- FIN CARROUSEL -->
 
