--- a/Site/views/partials/footer.ejs
+++ b/Site/views/partials/footer.ejs
@@ -6,7 +6,7 @@
           <div class="about">	
                           <h2>Nøsotros</h2>
             <p> Somos una empresa con más de 21 años de trayectoria, llevando novedades tecnølógicas a todos los hogares del país. <strong>Contamos con un equipo de trabajo profesional </strong> que hace posible el desarrollo continuo y sostenido de la empresa, guiado por los valores fundante: satisfacción al cliente, compromiso, cordialidad, mejora continua y eficacia.</p>
-            <p>Cøpyright © 2021. TechnoHouse® es una marca registrada. </p>
+            <p>Cøpyright © 2021. <strong>TechnoHouse®</strong>es una marca registrada. </p>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-12">
@@ -56,3 +56,13 @@
     </div>
   </div>
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    crossorigin="anonymous"></script>
