se agrega home casi terminado

--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -7,8 +7,6 @@
 	
 	
 			<!-- COMIENZO DE CARROUSEL-->
-
-
 			<script>
 				$('.carousel').carousel({
  					 interval: 5000,
@@ -58,99 +56,131 @@
 
 			<!-- FIN CARROUSEL -->
 
-			<div class='container'>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card" style="width: 18rem;">
-							<img src="..." class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the
-									bulk of the card's content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
+			
+
+<!-- PRODUCTOS !-->
+		<section class="container">
+			<div class="row productos">
+			  <div class="col-12">
+				<h2>Basadø en tu última visita</h2>
+			  </div>
+			  <div class="col-12 col-md-6 col-lg-3">
+				<div class="contenido">
+				  <img src="/images/productos/ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328.jpg" alt="">
+				  <div class="datos">
+					<h3>$500,97</h3>
+					<p>ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328</p>
+					<i class="fas fa-truck"></i>
+				  </div>
 				</div>
-			</div>
-			<div class='container'>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card" style="width: 18rem;">
-							<img src="..." class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the
-									bulk of the card's content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
+			  </div>
+
+			  <div class="col-12 col-md-6 col-lg-3">
+				<div class="contenido">
+				  <img src="/images/productos/ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340.jpg" alt="">
+				  <div class="datos">
+					<h3>$651,33</h3>
+					<span>10% OFF</span>
+					<p>ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340</p>
+					<i class="fas fa-truck "></i>
+				  </div>
 				</div>
-			</div>
-			<div class='container'>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card" style="width: 18rem;">
-							<img src="..." class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the
-									bulk of the card's content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
+			  </div>
+
+			  <div class="col-12 col-md-6 col-lg-3">
+				<div class="contenido">
+				  <img src="/images/productos/FUENTE STEP DOWN DC DC LM2596 1.25V 35V 3A ARDUINO.jpg" alt="">
+				  <div class="datos">
+					<h3>$210,40</h3>
+					<span>30% OFF</span>
+					<p>FUENTE STEP DOWN DC DC LM2596 1.25V 35V 3A ARDUINO</p>
+					<i class="fas fa-truck "></i>
+				  </div>
 				</div>
-			</div>
-			<div class='container'>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card" style="width: 18rem;">
-							<img src="..." class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the
-									bulk of the card's content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
+			  </div>
+			  <div class="col-12 col-md-6 col-lg-3">
+				<div class="contenido">
+				  <img src="/images/productos/SENSOR ULTRASONIDO HC-SR04 DISTANCIA ARDUINO ROBOTICA.jpg" alt="">
+				  <div class="datos">
+					<h3>250,68</h3>
+					<span>20% OFF</span>
+					<p>SENSOR ULTRASONIDO HC-SR04 DISTANCIA ARDUINO ROBOTICA</p>
+					<i class="fas fa-truck "></i>
+				  </div>
 				</div>
+			  </div>
 			</div>
-			<div class='container'>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card" style="width: 18rem;">
-							<img src="..." class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the
-									bulk of the card's content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
+		  </section>
+		  <!-- PRODUCTOS OFERTAS -->
+		  <section class="container">
+			<div class="row productos">
+			  <div class="col-12">
+				<h2>Ofertas</h2>
+			  </div>
+			  <div class="col-12 col-md-6 col-lg-3">
+				<div class="contenido">
+				  <img src="/images/productos/MODULO SENSOR DE SONIDO MICROFONO REGULABLE ARDUINO.jpg" alt="">
+				  <div class="datos">
+					<h3>$651,33</h3>
+					<span>40% OFF</span>
+					<p>MODULO SENSOR DE SONIDO MICROFONO REGULABLE ARDUINO</p>
+					<i class="fas fa-truck"></i>
+				  </div>
 				</div>
-			</div>
-			<div class='container'>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card" style="width: 18rem;">
-							<img src="..." class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the
-									bulk of the card's content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
+			  </div>
+			  <div class="col-12 col-md-6 col-lg-3">
+				<div class="contenido">
+				  <img src="images/productos/MINI SERVO TOWER PRO SG92 2.5KG TORQUE ARDUINO.jpg" alt="">
+				  <div class="datos">
+					<h3>$604,35</h3>
+					<span>10% OFF</span>
+					<p>MINI SERVO TOWER PRO SG92 2.5KG TORQUE ARDUINO</p>
+					<i class="fas fa-truck "></i>
+				  </div>
 				</div>
+			  </div>
+			  <div class="col-12 col-md-6 col-lg-3">
+				<div class="contenido">
+				  <img src="images/productos/MINI SERVO TOWER PRO SG92 2.5KG TORQUE ARDUINO.jpg" alt="">
+				  <div class="datos">
+					<h3>$604,35</h3>
+					<span>30% OFF</span>
+					<p>MINI SERVO TOWER PRO SG92 2.5KG TORQUE ARDUINO</p>
+					<i class="fas fa-truck "></i>
+				  </div>
+				</div>
+			  </div>
+			  <div class="col-12 col-md-6 col-lg-3">
+				<div class="contenido">
+				  <img src="/images/productos/ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340.jpg" alt="">
+				  <div class="datos">
+					<h3>$651,33</h3>
+					<span>10% OFF</span>
+					<p>ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340</p>
+					<i class="fas fa-truck "></i>
+				  </div>
+				</div>
+			  </div>
 			</div>
+		  </section>
+
+		  <%- include('partials/footer') %>
 
 
-			<%- include('partials/footer') %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	</body>
 
 </html>
