--- a/Site/public/stylesheets/home.css
+++ b/Site/public/stylesheets/home.css
@@ -29,3 +29,56 @@ h5 {
     padding-top: 40px;
     font-size: 13px;
   }
+
+
+  /* PRODUCTOS */
+.productos h2 {
+    font-size: 24px;
+    color: #666666;
+    margin: 30px 0;
+  }
+  .productos .contenido {
+    background-color: #fff;
+    border-radius: 5px;
+    margin-bottom: 40px;
+    text-align: center;
+    transition: transform .5s ease, box-shadow .5s ease;
+  }
+  .productos .contenido:hover {
+    transform: scale(1.02);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+  }
+  .productos img {
+    width: 95%;
+  }
+  .productos .datos {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: left;
+    border-top: 1px solid  #30475e;
+    padding: 20px;
+    position: relative;
+  }
+  .productos .datos h3 {
+    margin-bottom: 0;
+  }
+  .productos .datos span {
+    color: var(--color-verde);
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+  }
+  .productos .datos p {
+    margin-top: 10px;
+  }
+  .productos .datos i {
+    color: #30475e;
+    /*background-color: rgb(255, 155, 155);*/
+    border-color:  #30475e 1px solid ;
+    border-radius: 50%;
+    padding: 8px;
+    font-size: 1.3rem;
+    position: absolute;
+    top: -20px;
+    right: 20px;
+  }
