--- a/Site/public/stylesheets/home.css
+++ b/Site/public/stylesheets/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,400&display=swap');
+
 .carrousel-item img{
     height: 200px;
 }
@@ -82,3 +84,23 @@ h5 {
     top: -20px;
     right: 20px;
   }
+
+  /* CATEGORIAS */
+
+#categorias {
+  margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+.caja1{
+  -webkit-transition: 1s linear;
+  transition: 1s linear;
+  color: black;
+  
+  
+}
+.caja1:hover{
+  -webkit-box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+  box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+}
+
