--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -164,16 +164,76 @@
 			</div>
 		  </section>
 
-		  <%- include('partials/footer') %>
+	<!-- CATEGORIAS -->
+
+
+	<section class="container">
+		<div class="row productos">
+		  <div class="col-12">
+			<h2>Categorias</h2>
+		  </div>
+		  <div class="col-12 col-md-6 col-lg-3 caja1">
+			<div>
+				<a  href="#" target="_blank">  <img src="images/ARDUINO_01.jpg" alt=""></a>
+			</div>
+		  </div>
+
+		  <div class="col-12 col-md-6 col-lg-3">
+			<div class="">
+				<a  href="#" target="_blank">  <img src="images/ARDUINO_02.jpg" alt=""> </a>
+			</div>
+		  </div>
+
+		  <div class="col-12 col-md-6 col-lg-3">
+			<div class="">
+				<a  href="#" target="_blank">  <img src="/images/ARDUINO_03.jpg" alt=""> </a> 
+			</div>
+		  </div>
+
+		  <div class="col-12 col-md-6 col-lg-3">
+			<div class="">
+				<a href="#" target="_blank"> <img src="/images/ARDUINO_04.jpg" alt="">  </a>
+			</div>
+		  </div>
+		</div>
+	  </section>
+
+
+	  <section class="container">
+		<div class="row productos" id="categorias">
+		  <div class="col-12">
+		  </div>
+		  <div class="col-12 col-md-6 col-lg-3">
+			<div class="">
+				<a href="#" target="_blank"> <img src="/images/ARDUINO_05.jpg" alt=""></a>
+			  
+	
+			</div>
+		  </div>
+		  <div class="col-12 col-md-6 col-lg-3">
+			<div class="">
+				<a  href="#" target="_blank"><img src="images/ARDUINO_06.jpg" alt=""></a> 
+			</div>
+		  </div>
+
+		   <div class="col-12 col-md-6 col-lg-3">
+			<div class="">
+				<a  href="#" target="_blank"><img src="/images/ARDUINO_07.jpg" alt=""> </a>  
+			</div>
+		  </div>
+
+		 <div class="col-12 col-md-6 col-lg-3">
+			<div class="">
+				<a href="#" target="_blank"><img src="/images/ARDUINO_08.jpg" alt=""></a>
+			</div> 
+		  </div> 
+		</div>
+	  </section>
 
 
 
 
-
-
-
-
-
+	  <%- include('partials/footer') %>
 
 
 
